--- a/app/views/users/manage_website.html.erb
+++ b/app/views/users/manage_website.html.erb
@@ -1,3 +1,4 @@
+<% if session[:user_id] != nil && current_user.admin == true %>
 <h1 align = "center">
     Welcome to The Admin Page
 </h1>
@@ -70,4 +71,46 @@
       </tbody>
     </table>
   </div>
+
+
+  <div class="panel panel-default">
+    
+    <div class="panel-heading"><h1>Items</h1></div>
+      
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th colspan="1" class="page-header" align = "center">
+            <h3>All Admins</h3>
+          </th>
+        </tr>
+        <tr>
+          <th>Name</th>
+          <th>Email</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @users.each do |user| %>
+          <% if user.admin == true %>
+            <tr>
+              <td><%= user.username %></td>
+              <td><%= user.email %></td>
+              <td>
+                <% if user.email == "jasonzhao1219@gmail.com" %>
+                  <span class = "label label-default">Root User</span>
+                <% else %>
+                  <%= link_to "Remove from Admin", remove_admin_path(id_param: user.id), class: "btn btn-xs btn-danger" %>
+                <% end %>
+              </td>
+            </tr>
+          <% end %>
+        <% end %>  
+      </tbody>
+    </table>
+  </div>
 </div>
+
+<% else %>
+  <h1 align = "center">Sorry, you do not have access to this page. Please login with Admin Account</h1>
+<% end %>
