--- a/app/views/users/manage_website.html.erb
+++ b/app/views/users/manage_website.html.erb
@@ -80,31 +80,29 @@
     <table class="table table-striped">
       <thead>
         <tr>
-          <th colspan="1" class="page-header" align = "center">
-            <h3>All Admins</h3>
-          </th>
-        </tr>
-        <tr>
           <th>Name</th>
-          <th>Email</th>
+          <th>Description</th>
+          <th>Pictures</th>
           <th>Action</th>
         </tr>
       </thead>
       <tbody>
-        <% @users.each do |user| %>
-          <% if user.admin == true %>
-            <tr>
-              <td><%= user.username %></td>
-              <td><%= user.email %></td>
-              <td>
-                <% if user.email == "jasonzhao1219@gmail.com" %>
-                  <span class = "label label-default">Root User</span>
-                <% else %>
-                  <%= link_to "Remove from Admin", remove_admin_path(id_param: user.id), class: "btn btn-xs btn-danger" %>
-                <% end %>
-              </td>
-            </tr>
-          <% end %>
+        <% @items.each do |item| %>
+          <tr>
+            <td><%= item.name %></td>
+            <td><%= item.description %></td>
+            <td>
+              <% if item.item_pictures.any? %>
+                <div><%= image_tag item.item_pictures_urls[0], class: "picture-in-index" %></div>    
+              <% else %>
+                <p>No picture for this item</p>
+              <% end %>
+            </td>
+            <td>
+              <%= link_to "Delete this User", item_path(item), method: :delete, 
+              data: {confirm: "Are you sure you want to delete this item?"}, class: "btn btn-xs btn-danger" %>
+            </td>
+          </tr>
         <% end %>  
       </tbody>
     </table>
