--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -19,7 +19,7 @@
   					<li class="dropdown">
   						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Manage Your Items<span class="caret"></span></a>
   						<ul class="dropdown-menu">
-  							<li><a href="#">Your Listed Items</a></li>
+								<li><%= link_to 'Your Listed Items', main_app.listed_items_path %></li>
   							<li role="separator" class="divider"></li>
   							<li><%= link_to 'Borrowed Items', main_app.borrow_transactions_path %></li>
   							<li><%= link_to 'Lent Items', main_app.lend_transactions_path %></li>
