--- a/app/views/transactions/pending_index.html.erb
+++ b/app/views/transactions/pending_index.html.erb
@@ -71,7 +71,7 @@
 					</thead>
 					<tbody>
 						<% @pending_borrow_transactions.each do |transaction|%>
-							<tr class="danger tr_table_2">
+							<tr class="danger tr_table_2 borrow_requests">
 								<td><%= link_to "#{transaction.item.name}", item_path(transaction.item) %></td>
 								<td><%= transaction.item.description %></td>
 								<td><%= link_to "#{transaction.lender.username}", user_path(transaction.lender) %></td>
@@ -93,6 +93,8 @@
 									<% end %>
 								</td>
 								<input class="row_transaction_id" type="hidden" value="<%=transaction.id%>">
+								<input class="row_transaction_start_date" type="hidden" value="<%=transaction.start_date%>">
+								<input class="row_transaction_end_date" type="hidden" value="<%=transaction.end_date%>">
 							</tr>
 						<% end %>
 					</tbody>
