--- a/app/views/users/manage_website.html.erb
+++ b/app/views/users/manage_website.html.erb
@@ -99,7 +99,7 @@
                 <% end %>
               </td>
               <td>
-                <%= link_to "Delete this User", item_path(item), method: :delete, 
+                <%= link_to "Delete this Item", item_path(item), method: :delete, 
                 data: {confirm: "Are you sure you want to delete this item?"}, class: "btn btn-xs btn-danger" %>
               </td>
             </tr>
