--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -1,4 +1,6 @@
-<p><%= link_to 'All places', places_path %></p>
-<p>Add Place</p>
+<!-- <p><%= link_to 'All places', places_path %></p> -->
+<h1 align = "center">Add Address</h1>
 
-<%= render 'form' %>
+<div class = "container">
+  <%= render 'form' %>
+</div>
