ignore .xml files

--- a/app/views/welcome/faq.html.erb
+++ b/app/views/welcome/faq.html.erb
@@ -23,6 +23,6 @@
   <h3>What is the hourly price for borrowing an item?</h3>
   <div>Zero. This service is totally free to use.</div>
 
-  <h3>what if I forget what I have lend to whom?</h3>
+  <h3>What if I forget what I have lend to whom?</h3>
   <div>Don't worry. You can go to 'Manage your Items'-->'Lent Items' in the nav bar. Then you can see all items you lent there.</div>
 </div>
