--- a/app/views/items/_lookup.html.erb
+++ b/app/views/items/_lookup.html.erb
@@ -12,6 +12,11 @@
               options_from_collection_for_select(Tag.all, "id", "name", params[:tag_id]), class: "form-control" %>
         </div>
       </div>
+      <div class="form-group row no-padding col-md-12">
+        <% if @items.length == 0 %>
+          <small class="form-text text-muted">No items found. </small>
+        <% end %>
+      </div>
     </div>
   <% end %>
 </div>
