--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <div class = "container">
 
+  <br><br><h1 align = "center">Change Password</h1><br><br>
+
   <% if @user.errors.any? %>
     <div class = "row">
       <div class = "col-xs-8 col-xs-offset-2">
@@ -31,24 +33,6 @@
 
         <div class = "form-group">
           <div class = "control-label col-sm-2">
-            <%= form.label :name %>
-          </div>
-          <div class = "col-sm-8">
-            <%= form.text_field :username, class:"form-control" %>
-          </div>
-        </div>
-
-        <div class = "form-group">
-          <div class = "control-label col-sm-2">
-            <%= form.label :email %>
-          </div>
-          <div class = "col-sm-8">
-            <%= form.text_field :email, class:"form-control" %>
-          </div>
-        </div>
-
-        <div class = "form-group">
-          <div class = "control-label col-sm-2">
             <%= form.label :password %>
           </div>
           <div class = "col-sm-8">
@@ -66,7 +50,7 @@
         </div>
         <div class = "form-group">
           <div class = "col-sm-offset-2 col-sm-10">
-            <%= form.submit "Edit", class: 'btn btn-primary btn-lg'%>
+            <%= form.submit "Change Password", class: 'btn btn-primary btn-lg'%>
           </div>
         </div>
       </div>
