--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -10,6 +10,7 @@
   		<!-- Collect the nav links, forms, and other content for toggling -->
   		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
   			<ul class="nav navbar-nav">
+					<li><%= link_to "Browse all Items", main_app.items_path %></li>
 					<% if session[:user_id] != nil && current_user.admin == true %>
 						<li><%= link_to "Manage the Website", main_app.manage_website_path %></li>
 					<% end %>
@@ -19,6 +20,7 @@
   					<li class="dropdown">
   						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Manage Your Items<span class="caret"></span></a>
   						<ul class="dropdown-menu">
+								<li><%= link_to "Register a new item", main_app.new_item_path %></li>
 								<li><%= link_to 'Your Listed Items', main_app.listed_items_path %></li>
   							<li role="separator" class="divider"></li>
   							<li><%= link_to 'Borrowed Items', main_app.borrow_transactions_path %></li>
