changed buttons in navbar and also fixed line issue in dropdowns

--- a/app/views/welcome/contact_us.html.erb
+++ b/app/views/welcome/contact_us.html.erb
@@ -33,7 +33,7 @@
 						Nathaniel Xu
 					</td>
 					<td>
-						mathaniel.xu@mail.utoronto.ca
+						nathaniel.xu@mail.utoronto.ca
 					</td>
         </tr>
         <tr>
