--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -12,15 +12,18 @@
 				<% if session[:user_id] != nil && current_user.admin == true %>
 					<li><%= link_to "Manage the Website", main_app.manage_website_path %></li>
 				<% end %>
+				<% if session[:user_id] != nil %>
+                    <li><%= link_to "Register a new item", main_app.new_item_path %></li>
+                <% end %>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<% if session[:user_id] != nil %>
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Manage Your Items<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><%= link_to "Register a new item", main_app.new_item_path %></li>
 							<li><%= link_to 'Your Listed Items', main_app.listed_items_path %></li>
 							<li role="separator" class="divider"></li>
+							<hr style='margin-top: 5px; margin-bottom: 5px;'>
 							<li><%= link_to 'Borrowed Items', main_app.borrow_transactions_path %></li>
 							<li><%= link_to 'Lent Items', main_app.lend_transactions_path %></li>
 						</ul>
@@ -29,7 +32,7 @@
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Transactions<span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li><%= link_to 'Pending Transactions', main_app.pending_transactions_path %></li>
-							<li role="separator" class="divider"></li>
+							<hr style='margin-top: 5px; margin-bottom: 5px;'>
 							<li><%= link_to 'View Borrow History', main_app.borrow_transactions_history_path %></li>
 							<li><%= link_to 'View Lend History', main_app.lend_transactions_history_path %></li>
 						</ul>
@@ -43,9 +46,9 @@
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id = "line">Get Started!<span class="caret"></span></a>
 							<ul class="dropdown-menu">
 								<li align = "center"><%= link_to 'Login With Email', main_app.login_path %></li>
-                				<li role="separator" class="divider"></li>
+								<hr style='margin-top: 5px; margin-bottom: 5px;'>
                 				<li align = "center"><%= link_to 'Sign Up With Email', main_app.new_user_path %></li>
-                				<li role="separator" class="divider"></li>
+								<hr style='margin-top: 5px; margin-bottom: 5px;'>
 								<li align = "center"><%= link_to "Using Facebook", user_facebook_omniauth_authorize_path %></li>
 							</ul>
 						</li>
@@ -62,13 +65,12 @@
 							Welcome! <%= current_user.username %><span class="caret"></span></a>
 							<ul class="dropdown-menu">
 								<li align = "center"><%= link_to 'My Page', main_app.user_path(session[:user_id]) %></li>
-								<li role="separator" class="divider"></li>
+								<hr style='margin-top: 5px; margin-bottom: 5px;'>
+								<li align = "center"><%= link_to 'My Addresses', main_app.my_places_path %></li>
+								<hr style='margin-top: 5px; margin-bottom: 5px;'>
 								<li align = "center"><%= link_to current_user.friends.count.to_s + ' Following', main_app.my_friends_path %></li>
-	              				<li role="separator" class="divider"></li>
 	              				<li align = "center"><%= link_to Friendship.where(:friend_id => current_user.id).all.count.to_s + ' Followers', main_app.my_followers_path %></li>
-								<li role="separator" class="divider"></li>
-								<li align = "center"><%= link_to 'My addresses', main_app.my_places_path %></li>
-								<li role="separator" class="divider"></li>
+								<hr style='margin-top: 5px; margin-bottom: 5px;'>
 								<li align = "center"><%= link_to 'Log out', main_app.logout_path, method: :delete %></li>
 							</ul>
 						</li>
