restrict actions on tags

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,1 +1,6 @@
+<div class= "container">
+  <%= render 'items/lookup' %>
+
+  <br/><br/><br/><h1 align = "center">Listing all items</h1>
+
 <%= render 'list' %>
