--- a/app/views/items/listed_items.html.erb
+++ b/app/views/items/listed_items.html.erb
@@ -1,1 +1,6 @@
+<div class= "container">
+  <%= render 'items/lookup' %>
+
+  <br/><br/><br/><h1 align = "center">Listing your items</h1>
+
 <%= render 'list' %>
