--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,27 +1,48 @@
 <div class="container">
   <h1 align="center"><%= "Category: " + @tag.name %></h1>
   <div class="row">
-    <%= link_to "Edit Category Name", edit_tag_path(@tag) %></span>
+    <% if logged_in? && current_user.admin == true %>
+      <div align="center"><%= link_to "Edit Category Name", edit_tag_path(@tag) %></div>
+    <% end %>
   </div>
   <div align = "center"><%= will_paginate @tag_items %></div>
   <% @tag_items.each do |item|%>
-    <tr>
-      <td><%= item.name %></td>
-      <td><%= truncate(item.description, length: 10) %></td>
-      <td><%= item.user.username%></td>
-      <td><%= link_to 'Show', item_path(item) %></td>
-      <% if logged_in? && current_user == item.user %>
-        <td><%= link_to 'Edit', edit_item_path(item) %></td>
-        <td><%= link_to 'Delete', item_path(item), method: :delete, data: {confirm: "Are you sure?"} %></td>
-      <% end %>
-
-      <% if current_user!=item.user%>
-        <% query_params = {item_id: item.id} %>
-        <td><%= link_to('Request to Borrow', new_transaction_path(query_params))%></td>
-      <% end %>
-    </tr>
-    <br/>
-
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="well">
+          <% if item.item_pictures.any? %>
+            <div><%= image_tag item.item_pictures_urls[0], class: "picture-in-index" %></div>
+          <% end %>
+          <div class="item-name">
+            <p><%= item.name %></p>
+          </div>
+          <div class="item-description">
+            <div><%= truncate(item.description, length: 100) %></div>
+          </div>
+          <div>Owned by: <%= link_to item.user.username, user_path(item.user) %>
+            <% if item.tags.any? %>
+              | Tags:
+              <% item.tags.each do |tag| %>
+                <%= link_to tag.name, tag_path(tag) %>
+              <% end %>
+            <% end %>
+          </div>
+          <div class="article-actions">
+            <div>
+              <%= link_to 'Show', item_path(item), class: "btn btn-xs btn-info"  %>
+              <% if logged_in? && current_user == item.user %>
+                <%= link_to 'Edit', edit_item_path(item), class: "btn btn-xs btn-primary" %>
+                <%= link_to 'Delete', item_path(item), method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-xs btn-danger" %>
+              <% end %>
+              <% if current_user && current_user!=item.user%>
+                <% query_params = {item_id: item.id} %>
+                <%= link_to('Request to Borrow', new_transaction_path(query_params), class: "btn btn-xs btn-warning" )%>
+              <% end %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   <% end %>
   <div align = "center"><%= will_paginate @tag_items %></div>
 </div>
