--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,8 +20,13 @@
  html, body {
    height: 100%;
  }
- 
+
 footer {
-  position: relative;
+  position: fixed;
   text-align: center;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+	background-color: white;
 }
