--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -25,15 +25,6 @@ $navbar-default-bg: black;
 	font-weight: bold;
 }
 
-footer {
-	position: relative;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  line-height: 60px;
-	background-color: white;
-}
-
 ul{
 	list-style: none;
 }
@@ -177,4 +168,8 @@ li{
 .fa-instagram {
   background: #125688;
   color: white;
+}
+
+.container {
+	margin-bottom: 100px;
 }
