--- a/app/views/users/my_friends.html.erb
+++ b/app/views/users/my_friends.html.erb
@@ -5,7 +5,7 @@
 	<% if current_user.friendships.size > 0 %>
 		<table class="table table-striped">
 			<thead>
-			
+
 				<tr>
 					<th colspan="3" class="page-header">
 						<h2>My Followings</h2>
@@ -26,23 +26,23 @@
 						<td>
 							<%= friend.email %>
 						</td>
-						<td>                 
-							<%= link_to "Profile", user_path(friend), class: "btn btn-xs btn-primary" %> 
+						<td>
+							<%= link_to "Profile", user_path(friend), class: "btn btn-xs btn-primary" %>
 
 							<%= link_to "Items", show_items_path(id_param: friend.id), class: "btn btn-xs btn-success" %>
-									
+
 							<%= link_to "Unfollow", friendship_path(friend), method: :delete,
 								data: { confirm: "Are you sure?" }, class: "btn btn-xs btn-danger" %>
-						</td>  
+						</td>
 					</tr>
 				<% end %>
 			</tbody>
-		<table>
+		</table>
 
 	<% else %>
 		<div class = "row col-lg-12">
 			<h2>You don't have any friends yet!</h2>
-		</div>	
+		</div>
 	<%end%>
 
 </div>
