--- a/app/views/users/my_places.html.erb
+++ b/app/views/users/my_places.html.erb
@@ -26,7 +26,7 @@
           </tr>
         <% end %>
       </tbody>
-    <table>
+    </table>
   <% else %>
 		<div class = "row col-lg-12">
 			<h2>You don't have any addresses yet!</h2>
