fixed some front issues

--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -48,3 +48,11 @@
 #item-lookup .search_sub_part {
   padding: 0px;
 }
+
+.item_edit_all_item {
+  margin-bottom: 0 !important;
+}
+
+.item_form {
+  margin-bottom: 0 !important;
+}
