--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,6 +1,5 @@
-<div class= "container">
+<div class= "container item_edit_all_item">
   <%= render 'items/lookup' %>
-
-  <br/><br/><br/><h1 align = "center">Listing all items</h1>
+  <br/><h1 align = "center">Listing all items</h1>
 
 <%= render 'list' %>
