--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,12 +29,14 @@
           <p><%= link_to "Deauthorize", user_path(@user), method: :delete, data: {confirm: "Are you sure you want to deauthorize your account?"}, class: "btn btn-xl btn-primary" %></p>
         <% end %>
 
-        <% if current_user.not_friends_with?(@user.id) && @user != current_user %>
-          <%= link_to "Follow", add_friend_path(user: current_user, friend: @user), class: "btn btn-xl btn-primary", method: :post %>
-        <% else %>
-          <% if @user != current_user %>
-            <%= link_to "Unfollow", friendship_path(@user), method: :delete,
-              data: { confirm: "Are you sure?" }, class: "btn btn-xl btn-danger" %>
+        <% if current_user %>
+          <% if current_user.not_friends_with?(@user.id) && @user != current_user %>
+            <%= link_to "Follow", add_friend_path(user: current_user, friend: @user), class: "btn btn-xl btn-primary", method: :post %>
+          <% else %>
+            <% if @user != current_user %>
+              <%= link_to "Unfollow", friendship_path(@user), method: :delete,
+                data: { confirm: "Are you sure?" }, class: "btn btn-xl btn-danger" %>
+            <% end %>
           <% end %>
         <% end %>
       </div>
